{
    "name": "GameActions",
    "maps": [
        {
            "name": "Player",
            "id": "21700c11-75ee-472f-b864-1ae36d59778c",
            "actions": [
                {
                    "name": "PlacePoint",
                    "type": "Button",
                    "id": "92963a13-89c6-4a74-9672-ce6e1d2940de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeletePoint",
                    "type": "Button",
                    "id": "6448d77f-b52d-4c6a-8511-300d4d67e613",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7d349f22-9bcb-42be-b793-6d265ad531b4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse&Keyboard",
                    "action": "PlacePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dab359d7-7921-49a3-82a3-3e7779e7fed5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse&Keyboard",
                    "action": "DeletePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse&Keyboard",
            "bindingGroup": "Mouse&Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}